Память: готовый список журнала вместо сборки на кадре
HealthMemory.записи() звалась из render() через HealthScreen.правая()
и каждый раз пересобирала список и Component заново — тот же дефект,
что уже чинили в задачах 8 и 9. Теперь Component строится один раз
в записать(), а записи() отдаёт неизменяемый вид без аллокаций.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01AHk5jK1bjSMyuqmWjaheHK